create final flex layout

--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -18,9 +18,8 @@
     justify-content: space-between;
   }
 
-  .links {
-      display: flex;
-      justify-content: flex-end;
+  .signup {
+    margin-left: auto;
   }
 
   .login {
@@ -58,3 +57,27 @@
         width: 300px;
         height: 300px;
       }
+      
+      .social,
+      .subscribe {
+        align-self: flex-end;
+        margin-bottom: 20px;
+      }
+      .footer {
+        display: flex;
+        justify-content: space-between;
+      }
+      
+      .footer-item {
+        border: 1px solid #fff;
+        background-color: #D6E9FE;
+        height: 200px;
+        flex: 1;
+      }
+
+      .footer-one,.footer-three {
+        background-color: #5995DA;
+        flex: initial;
+        width: 300px;
+      }
+      
